feat: Add JPMS compatibility to Jackson 2 JSON mapper
Configure ObjectMapper with JPMS-compatible settings:
- Disable CAN_OVERRIDE_ACCESS_MODIFIERS to prevent setAccessible() calls
- Add ParameterNamesModule to discover constructor parameter names from
  bytecode instead of reflection

This allows applications using the MCP SDK to operate without
`--add-opens` JVM flags, enabling full JPMS module encapsulation.

The SDK already compiles with `-parameters` flag, which is required
for ParameterNamesModule to function.

Signed-off-by: Nicholas Walter Knize <nknize@apache.org>